# avocado

./: .gitignore  Cargo.toml  README.md  config.crm.yaml.sample  config.user.yaml.sample
avocado-base/: Cargo.toml
avocado-base/src/: error.rs  lib.rs  log.rs  secret.rs
avocado-crm/: .gitignore  Cargo.toml
avocado-crm/src/: lib.rs  main.rs
avocado-crm/src/cfg/: mod.rs
avocado-crm/src/cmd/: mod.rs
avocado-crm/src/db/: mod.rs
avocado-crm/src/db/sqlite/: session.rs
avocado-crm/src/err/: mod.rs
avocado-crm/src/middleware/: auth.rs
avocado-crm/src/session/: mod.rs
avocado-crm/src/session/cmd/: mod.rs  refresh_token.rs
avocado-crm/src/state/: mod.rs
avocado-crm/src/user/: mod.rs
avocado-crm/src/user/cmd/: list.rs  login.rs  logout.rs
avocado-crm/src/user/json/: list.rs  login.rs  logout.rs  mod.rs
avocado-crm/tests/: user.rs
avocado-crm/tests/app/: mod.rs
avocado-proto/: .gitignore  Cargo.toml  build.rs
avocado-proto/src/user/: jwt.proto  user.proto
avocado-schema/: Cargo.toml
avocado-schema/src/: lib.rs
avocado-schema/src/base/: field.rs  mod.rs  visitor.rs
avocado-schema/src/core/: array.rs  boolean.rs  float.rs  integer.rs  mod.rs  object.rs  string.rs
avocado-schema/src/core/constraint/: mod.rs
avocado-schema/src/core/constraint/common/: enumeration.rs  mod.rs  required.rs  typed.rs
avocado-schema/src/core/constraint/float/: enumeration.rs  exclusive_maximum.rs  exclusive_minimum.rs  maximum.rs  minimum.rs
avocado-schema/src/core/constraint/integer/: enumeration.rs  exclusive_maximum.rs  exclusive_minimum.rs  maximum.rs  minimum.rs
avocado-schema/src/core/constraint/object/: required.rs
avocado-schema/src/core/constraint/string/: enumeration.rs  max_length.rs  min_length.rs  mod.rs  pattern.rs
avocado-schema/src/core/visitor/: validator.rs  verifier.rs
avocado-user/: .gitignore  Cargo.toml  README.md
avocado-user/src/: lib.rs  main.rs
avocado-user/src/cfg/: mod.rs
avocado-user/src/cmd/: mod.rs
avocado-user/src/cmd/jwt/: mod.rs  refresh.rs  verify.rs  who.rs
avocado-user/src/cmd/user/: add.rs  get.rs  list.rs  login.rs  mod.rs
avocado-user/src/db/: mod.rs
avocado-user/src/db/sqlite/: user.rs
avocado-user/src/domain/: jwt.rs  user.rs
avocado-user/src/grpc/: mod.rs
avocado-user/src/grpc/service/: jwt.rs  mod.rs  user.rs
avocado-user/src/middleware/: auth.rs
avocado-user/src/state/: mod.rs
avocado-user/tests/: jwt_grpc.rs  user_grpc.rs
avocado-user/tests/app/: mod.rs
