[package]
name = "avocado-base"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { version = "1.3.0", features = ["v4", "macro-diagnostics", "serde"] }
tracing = "0.1.37"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.16", features = ["registry", "env-filter"]}
validator = "0.16.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.93"
secrecy = { version = "0.8.0", features = ["serde"] }
