[package]
name = "avocado-base"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { version = "1.17.0", features = ["v4", "macro-diagnostics", "serde"] }
tracing = "0.1.41"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["registry", "env-filter"]}
validator = "0.16.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
secrecy = { version = "0.8.0", features = ["serde"] }
