[package]
name = "avocado-crm"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "avocado-crm"

[dependencies]
axum = { version = "0.6.20", features = ["form"] }
axum-extra = { version = "0.7.7", features = ["cookie"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.37"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.16", features = ["registry", "env-filter"]}
tracing-bunyan-formatter = "0.3.6"
hyper = { version = "0.14.24", features = ["full"] }
tonic = "0.9.2"
prost = "0.11"
tower = "0.4.13"
tower-http = { version = "0.4.3", features = ["fs", "trace", "cors"] }
uuid = { version = "1.3.0", features = ["v4", "macro-diagnostics", "serde"] }
ulid = { version = "1.0.1", features = ["uuid", "serde"] }
sqlx = "0.7.1"
sea-query = "0.30.0"
sea-query-binder = { version = "0.5.0", features = [
    "sqlx-sqlite",
    "with-chrono",
    "with-json",
    "with-uuid",
    "with-time",
    "runtime-tokio-native-tls",
] }
chrono = { version = "0.4", default-features = false, features = ["alloc", "serde", "std", "clock"] }
time = { version = "0.3", features = ["parsing", "macros"] }
async-trait = "0.1.64"
thiserror = "1.0"
anyhow = "1.0"
config = "0.13"
futures-util = "0.3.28"
once_cell = "1"
reqwest = { version = "0.11.20", features = ["json", "cookies"] }
avocado-base = { path = "../avocado-base" }
avocado-proto = { path = "../avocado-proto" }

[dev-dependencies]
avocado-user = { path = "../avocado-user" }
