[package]
name = "avocado-crm"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "avocado-crm"

[dependencies]
axum = { version = "0.6.20", features = ["form"] }
axum-extra = { version = "0.8.0", features = ["cookie"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.41"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["registry", "env-filter"]}
tracing-bunyan-formatter = "0.3.10"
hyper = { version = "0.14.32", features = ["full"] }
tonic = "0.10.2"
prost = "0.12.6"
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["fs", "trace", "cors"] }
uuid = { version = "1.17.0", features = ["v4", "macro-diagnostics", "serde"] }
ulid = { version = "1.2.1", features = ["uuid", "serde"] }
sqlx = "0.7.4"
sea-query = "0.30.7"
sea-query-binder = { version = "0.5.0", features = [
    "sqlx-sqlite",
    "with-chrono",
    "with-json",
    "with-uuid",
    "with-time",
    "runtime-tokio-native-tls",
] }
chrono = { version = "0.4", default-features = false, features = ["alloc", "serde", "std", "clock"] }
time = { version = "0.3", features = ["parsing", "macros"] }
async-trait = "0.1.88"
thiserror = "1.0"
anyhow = "1.0"
config = "0.13"
futures-util = "0.3.31"
once_cell = "1"
reqwest = { version = "0.11.27", features = ["json", "cookies"] }
avocado-base = { path = "../avocado-base" }
avocado-proto = { path = "../avocado-proto" }

[dev-dependencies]
avocado-user = { path = "../avocado-user" }
