[package]
name = "avocado-user"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "avocado-user"

[dependencies]
sqlx = "0.7.4"
sea-query = "0.30.7"
sea-query-binder = { version = "0.5.0", features = [
    "sqlx-sqlite",
    "with-chrono",
    "with-json",
    "with-uuid",
    "with-time",
    "runtime-tokio-native-tls",
] }
uuid = { version = "1.17.0", features = ["v4", "macro-diagnostics", "serde"] }
ulid = { version = "1.2.1", features = ["uuid", "serde"] }
async-trait = "0.1.88"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.17"
chrono = { version = "0.4", default-features = false, features = ["alloc", "serde", "std", "clock"] }
time = { version = "0.3", features = ["parsing", "macros"] }
prost = "0.12.6"
tonic = "0.10.2"
config = "0.13"
tracing = "0.1.41"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["registry", "env-filter"]}
tracing-bunyan-formatter = "0.3.10"
jsonwebtoken = "9.3.1"
secrecy = "0.8.0"
argon2 = { version = "0.5.3", features = ["std"] }
base64 = "0.21.7"
validator = { version = "0.16.1", features = ["derive"] }
thiserror = "1.0"
anyhow = "1.0"
once_cell = "1"
tower = "0.4.13"
hyper = "0.14.32"
futures-util = "0.3.31"
fake = { version = "2.10", features = ["derive", "uuid"] }
avocado-base = { path = "../avocado-base" }
avocado-proto = { path = "../avocado-proto" }

[build-dependencies]
tonic-build = "0.10.2"
